# wahsp

./: LICENSE  Main.hs  Makefile  README.md  index.html  wahsp.cabal
Web/: Audio.hs
Web/Audio/: JavaScript.hs  Packets.hs  WebAudio.hs
examples/: Basic.hs  Lfo.hs  SetValue.hs  wahsp-examples.cabal
js/: kansas-comet.js
