name:                wahsp-examples
version:             0.2
synopsis:            Examples of using wahsp
homepage:            https://github.com/nshaheed/WebAudioHs/
Bug-reports:         https://github.com/nshaheed/WebAudioHs/issues                     
license:             BSD3
author:              Nicholas Shaheed
maintainer:          nshaheed@ku.edu
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3
data-files:

executable basic
  main-is:             Basic.hs
  build-depends:       base  >= 4.7 && < 4.12,
                       wahsp >= 0.1
  hs-source-dirs:      
  default-language:    Haskell2010
  GHC-options:         -threaded

executable lfo
  main-is:             Lfo.hs
  build-depends:       base  >= 4.7 && < 4.12,
                       wahsp >= 0.1
  hs-source-dirs:      
  default-language:    Haskell2010
  GHC-options:         -threaded

executable setValue
  main-is:             SetValue.hs
  build-depends:       base  >= 4.7 && < 4.12,
                       wahsp >= 0.1
  hs-source-dirs:      
  default-language:    Haskell2010
  GHC-options:         -threaded  
